# ChangeLog for dev-python/rad
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  11 Dec 2010; James Rowe <jnrowe@gmail.com> rad-0.1.2.ebuild:
  Keyworded amd64.

*rad-0.1.2 (08 Nov 2010)

  08 Nov 2010; James Rowe <jnrowe@gmail.com> +rad-0.1.2.ebuild:
  Version bump [212].

  07 Nov 2010; James Rowe <jnrowe@gmail.com> rad-0.1.1.ebuild:
  Updated URL for GitHub's recent switch to HTTPS everywhere.

  06 Oct 2010; James Rowe <jnrowe@gmail.com> metadata.xml:
  Added remote-id to metadata.

  30 Sep 2010; James Rowe <jnrowe@gmail.com> rad-0.1.1.ebuild:
  Keyworded x86.

  30 Sep 2010; James Rowe <jnrowe@gmail.com> rad-0.1.1.ebuild:
  Keyworded amd64.

  31 Aug 2010; James Rowe <jnrowe@gmail.com> rad-0.1.1.ebuild:
  Keyworded ~x86.

*rad-0.1.1 (31 Aug 2010)

  31 Aug 2010; James Rowe <jnrowe@gmail.com> +rad-0.1.1.ebuild,
  +metadata.xml:
  Initial ebuild, by me [1fe].
