@@ -1,17 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST rad-0.1.1-README.rst 1739 RMD160 81511c36de5c7742d3313d97dd9628072a31c621 SHA1 d2c2d42e321248259479e978b3c68497cde437fd SHA256 5be75b20712604d6d9d9326cd6976db6e6d3df207af9a85a1ebd4ae168118b31
-DIST rad-0.1.1.tar.gz 4631 RMD160 dc247432934f7014cd1c6821947e0f85cc384ce6 SHA1 281042f26bd5e74df77a8604d9fb46442663a9d6 SHA256 d4a15faafd19016a4e9f3b87186fc156985839fe083b075ee80b37b962294e05
 DIST rad-0.1.2.tar.gz 4876 RMD160 3acaabff904d50f008a030021e4559ff5d517f8e SHA1 1fe8c3f2acb0e2c8ced20113f16a21438fc775cd SHA256 21aea84c55479b7b4987aac5b85f4917b3228720c5cfeada44c184515f9a6f47
-EBUILD rad-0.1.1.ebuild 716 RMD160 30f410ea2f461a6de7e9289bfdf30bcb4e3423ea SHA1 143cbdb86bfa675437b45510ad8ed28d38a3da11 SHA256 84b28398520a24cda059ea876c1a8f636df04bd9a5331c173a9f47132347615d
-EBUILD rad-0.1.2.ebuild 617 RMD160 bd3b9a5dbe01e89c5f6f462ef957b1c587ada5d3 SHA1 e03544013114d3bd80f12d55170065fcb1e3fed5 SHA256 3d0dfa0a2286c50d43dbb3526c356ee6004deb3f780b7cb825efdc57c14a0829
-MISC ChangeLog 913 RMD160 e35b14ac0cd4e67e240ecbdabebba97c7cddbcba SHA1 c512374c36a7e3fedbe05b6da222cf8f5803b210 SHA256 f54029264a139159577f0bed6cefd04585093dc54a8ccd3312d6760daeacc286
+EBUILD rad-0.1.2.ebuild 616 RMD160 39d77704cc54e1f620735f9e15dc2dc813d8223a SHA1 6a22a19eeac2943c82f830be87765f72aeb33304 SHA256 19f321754902bebe2e4975a82f685cb72e7465a1f22eb9236f2e49ae5124390d
+MISC ChangeLog 1015 RMD160 4ffb87c756f5b395a6b33d0675f62712b5818c09 SHA1 fd1163a447bafe25acd6baa672e816ed2976c410 SHA256 540382a039afc9c52e4e32f0cb74b585fe4d583b0ef947119bc60a3c60ebe2c7
 MISC metadata.xml 680 RMD160 1b6bf4b6840297b851d881c0503f087eb419d391 SHA1 c643bc0149fae5c1e8e26468ca7d7ab8e4150c8c SHA256 5e446419e6ae2bcc553d9d54dac95e162c1589d255695e2325e8ce181a3fb913
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAk0DAtIACgkQzJrj3cAXR0n1zACcC6zMgJI5ER0oWm0A5gJBXz7j
-6X8AoLZ5COEmQ6vuFTMFRpVGAc8Uexr6
-=sDw4
+iEYEARECAAYFAk0FErQACgkQzJrj3cAXR0lYrQCfZldnhl0pguyU4QIjAsjcTzCh
+T4AAn2nSUdV+Eh90rApFCcKNYZ2GJdkO
+=nRjd
 -----END PGP SIGNATURE-----
