@@ -1,22 +1,0 @@
-dev-python/setuptools >=app-admin/eselect-python-20091230 || ( =dev-lang/python-2.7* =dev-lang/python-2.6* )
-dev-python/colorama dev-python/plac dev-python/pyyaml >=app-admin/eselect-python-20091230 || ( =dev-lang/python-2.7* =dev-lang/python-2.6* )
-0
-mirror://pypi/r/rad/rad-0.1.1.tar.gz https://github.com/robbles/rad/raw/v0.1.1/README.rst -> rad-0.1.1-README.rst
-
-http://pypi.python.org/pypi/rad/
-MIT
-A super easy console highlighter. Text goes in, colour comes out.
-amd64 x86
-distutils multilib python toolchain-funcs
-
-
-
-
-3
-
-compile install postinst postrm prepare unpack
-
-
-
-
-
