@@ -6,7 +6,7 @@ mirror://pypi/r/rad/rad-0.1.2.tar.gz
 http://pypi.python.org/pypi/rad/
 MIT
 A super easy console highlighter. Text goes in, colour comes out.
-amd64 ~x86
+amd64 x86
 distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
 
 
