@@ -1,4 +1,3 @@
-REM 2010-12-08 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/rad-0.1.2 %a
 REM 2010-12-09 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-python/showme-1.0.0 %a
 REM 2010-12-09 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 sci-visualization/pycha-0.5.3 %a
 REM 2010-12-09 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 www-apps/mnemosyne-0.12 %a
