@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  12 Dec 2010; James Rowe <jnrowe@gmail.com> -rad-0.1.1.ebuild,
+  rad-0.1.2.ebuild:
+  Keyworded x86.
+
   11 Dec 2010; James Rowe <jnrowe@gmail.com> rad-0.1.2.ebuild:
   Keyworded amd64.
 
